# framework.uifw.xorg.lib.libdrm

./: AUTHORS  COPYING  Makefile.am  build.sh  configure.ac  libdrm.pc.in  xf86drmMode.c  xf86drmMode.h  xf86drmSL.c
debian/: changelog  control  copyright  libdrm-dev.install  libdrm-dev.links  libdrm-slp1.install  libdrm2.install  libkms1.install  rules
exynos/: exynos_drm.c  exynos_drm.h  exynos_drmif.h
include/drm/: Makefile.am  drm.h  drm_mode.h  exynos_drm.h  sdp_drm.h
libkms/: Makefile.am  exynos.c  internal.h  linux.c
packaging/: libdrm.changes  libdrm.spec
sdp/: Makefile.am  libdrm_sdp.pc.in  sdp_drm.c  sdp_drm.h  sdp_drmif.h
slp/: drm_slp_bufmgr.c  drm_slp_bufmgr.h
tests/: Makefile.am
tests/g2dtest/: Makefile.am  g2d.h  g2d_reg.h  g2dtest.c
tests/gemtest/: Makefile.am  gemtest.c  ump_ref_drv.h
tests/ipptest/: Makefile.am  fimc.c  fimctest.c  gem.c
tests/modetest/: Makefile.am  modetest.c
tests/planetest/: Makefile.am  planetest.c
tests/proptest/: proptest.c
tests/rottest/: Makefile.am  gem.c  gem.h  rotator.c  rotator.h  rottest.c  rottest.h  util.c
tests/sdp/: Makefile.am  buffers.c  buffers.h  sdp_test.c
tests/vbltest/: vbltest.c
